# data-engineering-tolic

./: .gitignore  README.md  start_jupyter.sh
airflow/: docker-compose.yaml
airflow-grafana-tutorial/: .env
airflow-local-dev/: .env  docker-compose-dataeng.yaml
airflow-research/dags/: dbt_project_in_github_dag.py  logical_date.py
dlt-hub/: pyproject.toml  sql_database_pipeline.py
duckdb-research/: .env.shared  main.py  pyproject.toml
gx-research/: main.py
gx-research/gx/: great_expectations.yml
k8s/airflow-helm/base/: values-rendered.yaml  values-used.yaml
k8s/airflow-helm/base/helm/: postgres-rendered.yaml  roles-rendered.yaml  statsd-rendered.yaml
k8s/airflow-helm/overlays/dev/: env.yaml  kustomization.yaml  secrets-rendered.yaml
k8s/airflow-jsonnet/base/: kustomization.yaml
k8s/grafana_tanka/prom-grafana/: jsonnetfile.lock.json
research/airflow-research/: main.py  pyproject.toml
research/duckdb-research/: README.md  adhoc.py  create_secret.py  duck_lake.py  flowchart.mmd  helpers.py  main.py  pyproject.toml
research/duckdb-research/query/: index_query.sql  main_query.sql  upload_file_query.sql
research/gx-research/: data_docs.py
research/k8s-research/airflow-helm/: README.md
research/k8s-research/airflow-jsonnet/: Makefile  jsonnetfile.json
research/k8s-research/airflow-sandbox/: rendered.yaml
research/spark-research/: spark_etl_postgres_to_gcs.py
scripts/: .env  bootstrap.sh  deploy-airflow-local.sh  deploy-dbt-local-prod.sh  deploy-dbt-local.sh
spark/: spark_etl_postgres_to_gcs.py
tutorial/dqops/: pyproject.toml
(+21 files in other folders)
