[project]
name = "duckdb-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.3.2",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-storage>=3.4.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pendulum>=3.1.0",
    "pytz>=2025.2",
]
